--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,7 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center
+  justify-content: center;
+  align-items: center;
+  background: #f8f8f8
 }
